--- a/AppstoreReviews/Base.lproj/Main.storyboard
+++ b/AppstoreReviews/Base.lproj/Main.storyboard
@@ -713,7 +713,7 @@
                                     <rect key="frame" x="1" y="17" width="238" height="117"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="80" headerView="eX8-pU-nlO" viewBased="YES" id="9mP-dQ-umL">
+                                        <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="none" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="80" headerView="eX8-pU-nlO" viewBased="YES" id="9mP-dQ-umL">
                                             <rect key="frame" x="0.0" y="0.0" width="598" height="0.0"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
@@ -768,14 +768,14 @@
                                                                     </connections>
                                                                 </textField>
                                                                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="PFY-HF-tbY" customClass="EDStarRating">
-                                                                    <rect key="frame" x="70" y="55" width="100" height="20"/>
+                                                                    <rect key="frame" x="70" y="35" width="100" height="20"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="20" id="3ud-d2-Pzr"/>
                                                                         <constraint firstAttribute="width" constant="100" id="YTh-7a-KdY"/>
                                                                     </constraints>
                                                                 </customView>
                                                                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Izq-Vw-AH7">
-                                                                    <rect key="frame" x="70" y="35" width="515" height="20"/>
+                                                                    <rect key="frame" x="70" y="55" width="515" height="20"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="20" id="OuV-Ih-Vsm"/>
                                                                     </constraints>
@@ -788,17 +788,17 @@
                                                                         <binding destination="tQe-YB-VfM" name="value" keyPath="objectValue.title" id="L0O-rq-tr6"/>
                                                                     </connections>
                                                                 </textField>
-                                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Ad-j7-rMu">
+                                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" allowsExpansionToolTips="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Ad-j7-rMu">
                                                                     <rect key="frame" x="70" y="18" width="515" height="17"/>
-                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Content" id="WVn-3m-Agh">
+                                                                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="Content" id="WVn-3m-Agh">
                                                                         <font key="font" metaFont="system"/>
                                                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
                                                                     <connections>
-                                                                        <binding destination="tQe-YB-VfM" name="value" keyPath="objectValue.content" id="P9F-5G-HST">
+                                                                        <binding destination="tQe-YB-VfM" name="value" keyPath="objectValue.content" id="Ig4-i4-d16">
                                                                             <dictionary key="options">
-                                                                                <bool key="NSConditionallySetsEditable" value="YES"/>
+                                                                                <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
                                                                             </dictionary>
                                                                         </binding>
                                                                     </connections>
@@ -820,19 +820,20 @@
                                                             </subviews>
                                                             <constraints>
                                                                 <constraint firstItem="Q2k-1j-0He" firstAttribute="top" secondItem="tQe-YB-VfM" secondAttribute="top" constant="10" id="23h-7X-qIN"/>
-                                                                <constraint firstItem="5Ad-j7-rMu" firstAttribute="top" secondItem="Izq-Vw-AH7" secondAttribute="bottom" id="4FC-A0-fCV"/>
                                                                 <constraint firstItem="Q2k-1j-0He" firstAttribute="centerX" secondItem="PEZ-r1-7hK" secondAttribute="centerX" id="6FP-Re-4YF"/>
-                                                                <constraint firstItem="PFY-HF-tbY" firstAttribute="top" secondItem="tQe-YB-VfM" secondAttribute="top" constant="5" id="C63-Ge-vai"/>
+                                                                <constraint firstItem="Izq-Vw-AH7" firstAttribute="top" secondItem="tQe-YB-VfM" secondAttribute="top" constant="5" id="6v4-nG-fOe"/>
                                                                 <constraint firstAttribute="trailing" secondItem="5Ad-j7-rMu" secondAttribute="trailing" constant="12" id="EXs-VH-KDB"/>
                                                                 <constraint firstAttribute="trailing" secondItem="Izq-Vw-AH7" secondAttribute="trailing" constant="12" id="ItN-gb-YnO"/>
                                                                 <constraint firstAttribute="trailing" secondItem="qbv-zx-rM4" secondAttribute="trailing" constant="12" id="Lz5-NJ-aSN"/>
                                                                 <constraint firstItem="Izq-Vw-AH7" firstAttribute="leading" secondItem="Q2k-1j-0He" secondAttribute="trailing" constant="12" id="Qje-Oo-vy0"/>
+                                                                <constraint firstItem="PFY-HF-tbY" firstAttribute="top" secondItem="Izq-Vw-AH7" secondAttribute="bottom" id="W24-VO-K0L"/>
                                                                 <constraint firstItem="PEZ-r1-7hK" firstAttribute="top" secondItem="Q2k-1j-0He" secondAttribute="bottom" id="WNx-hi-zYu"/>
                                                                 <constraint firstItem="qbv-zx-rM4" firstAttribute="leading" secondItem="Q2k-1j-0He" secondAttribute="trailing" constant="12" id="dTi-hj-6mU"/>
                                                                 <constraint firstItem="PFY-HF-tbY" firstAttribute="leading" secondItem="Q2k-1j-0He" secondAttribute="trailing" constant="10" id="epl-kE-a9H"/>
-                                                                <constraint firstItem="Izq-Vw-AH7" firstAttribute="top" secondItem="PFY-HF-tbY" secondAttribute="bottom" id="f6o-On-nVZ"/>
+                                                                <constraint firstAttribute="bottom" secondItem="qbv-zx-rM4" secondAttribute="bottom" constant="3" id="gtu-6i-IdQ"/>
                                                                 <constraint firstItem="5Ad-j7-rMu" firstAttribute="leading" secondItem="Q2k-1j-0He" secondAttribute="trailing" constant="12" id="lLt-Db-gXn"/>
                                                                 <constraint firstItem="Q2k-1j-0He" firstAttribute="leading" secondItem="tQe-YB-VfM" secondAttribute="leading" constant="10" id="wkk-v3-0MS"/>
+                                                                <constraint firstItem="5Ad-j7-rMu" firstAttribute="top" secondItem="PFY-HF-tbY" secondAttribute="bottom" id="xOU-EV-dOH"/>
                                                                 <constraint firstItem="qbv-zx-rM4" firstAttribute="top" secondItem="5Ad-j7-rMu" secondAttribute="bottom" id="yai-Fx-ms5"/>
                                                             </constraints>
                                                             <connections>
@@ -920,7 +921,7 @@
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                         <rect key="contentRect" x="163" y="208" width="800" height="270"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1280" height="800"/>
-                        <toolbar key="toolbar" implicitIdentifier="A3C4AD58-FB17-4D91-8BBE-6860C3D90131" autosavesConfiguration="NO" displayMode="iconOnly" sizeMode="small" id="Rdn-WK-4WK">
+                        <toolbar key="toolbar" implicitIdentifier="A3C4AD58-FB17-4D91-8BBE-6860C3D90131" autosavesConfiguration="NO" displayMode="iconOnly" sizeMode="regular" id="Rdn-WK-4WK">
                             <allowedToolbarItems>
                                 <toolbarItem implicitItemIdentifier="NSToolbarSpaceItem" id="eJg-3d-Guv"/>
                                 <toolbarItem implicitItemIdentifier="NSToolbarFlexibleSpaceItem" id="Gg2-U0-AHb"/>
@@ -929,7 +930,6 @@
                                         <action selector="refreshApplication:" target="E8W-Gv-fjB" id="bOd-Sc-N6h"/>
                                     </connections>
                                 </toolbarItem>
-                                <toolbarItem implicitItemIdentifier="86DDA604-7126-4987-BB58-CEDF7165565E" label="Settings" paletteLabel="Settings" tag="-1" image="NSActionTemplate" id="bLG-Kn-7Q9"/>
                                 <toolbarItem implicitItemIdentifier="5040E8D9-DD16-4D48-A4F7-82B05201980E" label="" paletteLabel="" id="O4h-6f-5Qw">
                                     <nil key="toolTip"/>
                                     <size key="minSize" width="100" height="28"/>
@@ -950,19 +950,23 @@
                                 </toolbarItem>
                                 <toolbarItem implicitItemIdentifier="B46D65A0-A902-4512-89F4-1020066CABED" label="" paletteLabel="" image="NSActionTemplate" id="lWF-mc-dTc">
                                     <nil key="toolTip"/>
-                                    <size key="minSize" width="38" height="20"/>
-                                    <size key="maxSize" width="38" height="33"/>
+                                    <size key="minSize" width="30" height="28"/>
+                                    <size key="maxSize" width="40" height="28"/>
                                     <popUpButton key="view" verticalHuggingPriority="750" id="86s-19-3Op">
                                         <rect key="frame" x="0.0" y="14" width="38" height="28"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <popUpButtonCell key="cell" type="roundTextured" bezelStyle="texturedRounded" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" pullsDown="YES" arrowPosition="arrowAtCenter" id="QDp-ep-0Ia">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                            <font key="font" metaFont="menu"/>
+                                            <font key="font" metaFont="system"/>
                                             <menu key="menu" id="hQD-RF-WYJ">
                                                 <items>
                                                     <menuItem state="on" image="NSActionTemplate" hidden="YES" id="n7W-XG-F69"/>
-                                                    <menuItem title="Open in Itunes ..." id="cFs-J6-JGM"/>
-                                                    <menuItem title="Export ..." id="f1n-ML-MFv"/>
+                                                    <menuItem title="Open in Appstore ..." id="cFs-J6-JGM">
+                                                        <connections>
+                                                            <action selector="openInAppstore:" target="E8W-Gv-fjB" id="UXn-0T-f8W"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                    <menuItem title="Export reviews..." id="f1n-ML-MFv"/>
                                                 </items>
                                             </menu>
                                         </popUpButtonCell>
@@ -1218,8 +1222,8 @@
                                             <constraint firstItem="oOD-Iw-tqx" firstAttribute="height" secondItem="HBC-En-0J8" secondAttribute="height" id="wb8-ic-azI"/>
                                         </constraints>
                                     </customView>
-                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ecL-sY-6RS">
-                                        <rect key="frame" x="2" y="0.0" width="196" height="30"/>
+                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ecL-sY-6RS">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="3zP-xA-QMZ"/>
                                         </constraints>
